[package]
name = "quorum"
version = "0.1.0"
edition = "2021"
authors = ["Utkarsh <compiledbyutkarsh@users.noreply.github.com>"]
description = "A Raft consensus library with deterministic simulation testing"
license = "MIT"
repository = "https://github.com/compiledbyutkarsh/quorum"
readme = "README.md"
keywords = ["raft", "consensus", "distributed-systems", "simulation"]

[dependencies]

[dev-dependencies]

[profile.release]
lto = true
codegen-units = 1